MDEV-8694 Wrong result for SELECT..WHERE a NOT LIKE 'a ' AND a='a' Note, the patch for MDEV-8661 unintentionally fixed MDEV-8694 as well, as a side effect. Adding a real clear fix: implementing Item_func_like::propagate_equal_fields() with comments.